# devops-engineer-from-scratch-project-313

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  ruff.toml  test_app.py
.github/workflows/: push.yml
app/: database.py  main.py  models.py  routes.py  test_app.py
